💡fix invisible list modifiy modal background

--- a/app/javascript/styles/head-space/diff.scss
+++ b/app/javascript/styles/head-space/diff.scss
@@ -320,6 +320,10 @@ html {
   background-color: rgba(0, 0, 0, 50%);
 }
 
+.modal-root__modal {
+  background-color: black;
+}
+
 /* April fools */
 
 body.april-fools,
